Trying to fix overlap issue on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -213,6 +213,7 @@ p {
   padding: 20px;
   height: 400px;
   position: relative;
+  overflow: hidden;
   @media screen and (max-width: 1024px) {
     padding-top: 175px;
   }
@@ -298,6 +299,8 @@ img {
     @media screen and (max-width: 640px) {
       top: 50px;
       left: 0;
+      max-width: 100%;
+      height: auto;
     }
   }
   &#image-2 {
